--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,26 @@
         <sourceDirectory>src/main/scala</sourceDirectory>
         <testSourceDirectory>src/test/scala</testSourceDirectory>
         <plugins>
+                 <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.5.8.201207111220</version>
+                    <executions>
+                      <execution>
+                        <goals>
+                          <goal>prepare-agent</goal>
+                        </goals>
+                      </execution>
+                      <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                          <goal>report</goal>
+                        </goals>
+                      </execution>
+                    </executions>
+                  </plugin>
+
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
