--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ jdk:
   - openjdk8
 
 script: travis_wait 30 mvn clean test -PscalaBaseVersion=2.11.4
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
