--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>spark.phrase</groupId>
+    <groupId>com.github.spoddutur</groupId>
     <artifactId>spark-phrase-extraction</artifactId>
     <version>1.0-SNAPSHOT</version>
 
