--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: scala
 scala:
-  - 2.11.4
+- 2.11.4
 sudo: true
-dist: precise
-
 dist: trusty
-
 jdk:
-  - oraclejdk8
-  - openjdk8
-
+- oraclejdk8
+- openjdk8
 script: travis_wait 30 mvn clean test -PscalaBaseVersion=2.11.4
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+- bash <(curl -s https://codecov.io/bash)
+before_install:
+- openssl aes-256-cbc -K $encrypted_cf390b3cd75b_key -iv $encrypted_cf390b3cd75b_iv
+  -in all.gpg.enc -out all.gpg -d
